--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,8 +1,4 @@
 {
-   "id": "keyExample",
-   "service_account_id": "account_id",
-   "created_at": "2020-10-13T13:05:11Z",
-   "key_algorithm": "RSA_2048",
-   "public_key": "pubkeyExample",
-   "private_key": "privatekeyExample"
+    "service_account_key_file": "keyExample.json",
+    "folder_id": "111"
 }
